--- a/src/View/page/index.html
+++ b/src/View/page/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="../../../web/css/style.css">
     <title>Title</title>
 </head>
 <body>
-
+	<p class="yeah">It's ok</p>
 </body>
 </html>
