--- a/src/View/page/index.html
+++ b/src/View/page/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="../../../web/css/style.css">
-    <title>Title</title>
+    <link href="https://fonts.googleapis.com/css?family=Poppins:200,400,600,900" rel="stylesheet">
+    <title>Oply</title>
 </head>
 <body>
 	<p class="yeah">It's ok</p>
