--- a/web/scss/style.scss
+++ b/web/scss/style.scss
@@ -1,6 +1,16 @@
-@import 'pages/index';
-
-
+// TOOLS
 @import 'tools/variable';
 @import 'tools/reset';
 @import 'tools/medias';
+
+
+// PAGES
+@import 'pages/index';
+
+
+// UI
+
+@import 'ui/btn';
+
+
+
