wip inputs first shot

--- a/src/View/page/index.html
+++ b/src/View/page/index.html
@@ -6,6 +6,27 @@
     <title>Title</title>
 </head>
 <body>
-	<p class="yeah">It's ok</p>
+	<div class="form">
+        <div class="field">
+            <label for="" class="label">Your email address</label>
+            <input type="text" value="johndoe@gmail.com" class="input__text">
+        </div>
+        <div class="field field--validated">
+            <label for="" class="label">Your email address</label>
+            <input type="text" value="johndoe@gmail.com" class="input__text">
+        </div>
+        <div class="field field--errored">
+            <label for="" class="label">Your email address</label>
+            <input type="text" value="johndoe@gmail.com" class="input__text">
+        </div>
+        <div class="field field--actived">
+            <label for="" class="label">Your email address</label>
+            <input type="text" value="johndoe@gmail.com" class="input__text">
+        </div>
+        <div class="field field--disabled">
+                <label for="" class="label">Your email address</label>
+                <input type="text" value="johndoe@gmail.com" class="input__text">
+            </div>
+    </div>
 </body>
 </html>
