fix conflicts and add forgotten files - again

--- a/src/View/page/index.html
+++ b/src/View/page/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="../../../web/css/style.css">
-    <title>Title</title>
+    <link href="https://fonts.googleapis.com/css?family=Poppins:200,400,600,900" rel="stylesheet">
+    <title>Oply</title>
 </head>
 <body>
 	<div class="form">
@@ -28,5 +29,6 @@
                 <input type="text" value="johndoe@gmail.com" class="input__text">
             </div>
     </div>
+	<button class="btn">Connexion</button>
 </body>
 </html>
