--- a/web/scss/style.scss
+++ b/web/scss/style.scss
@@ -1,3 +1,19 @@
 @import 'settings/index';
 @import 'pages/index';
 @import 'ui/form/index';
+// TOOLS
+@import 'tools/variable';
+@import 'tools/reset';
+@import 'tools/medias';
+
+
+// PAGES
+@import 'pages/index';
+
+
+// UI
+
+@import 'ui/btn';
+
+
+
