enhance scss architecture

--- a/src/View/page/index.html
+++ b/src/View/page/index.html
@@ -12,19 +12,19 @@
             <label for="" class="label">Your email address</label>
             <input type="text" value="johndoe@gmail.com" class="input__text">
         </div>
-        <div class="field field--validated">
+        <div class="field field--valid">
             <label for="" class="label">Your email address</label>
             <input type="text" value="johndoe@gmail.com" class="input__text">
         </div>
-        <div class="field field--errored">
+        <div class="field field--error">
             <label for="" class="label">Your email address</label>
             <input type="text" value="johndoe@gmail.com" class="input__text">
         </div>
-        <div class="field field--actived">
+        <div class="field field--active">
             <label for="" class="label">Your email address</label>
             <input type="text" value="johndoe@gmail.com" class="input__text">
         </div>
-        <div class="field field--disabled">
+        <div class="field field--disable">
                 <label for="" class="label">Your email address</label>
                 <input type="text" value="johndoe@gmail.com" class="input__text">
             </div>
