--- a/web/scss/tools/_variables.scss
+++ b/web/scss/tools/_variables.scss
@@ -7,6 +7,10 @@ $breakPointTablet: 780px;
 $breakPointDesktop: 1024px;
 $breakPointMaxDesktop : 1440px;
 
+/**
+ * COLORS
+ */
+
 // body colors
 $bodyColor: #0A175E;
 $white: #FFFFFF;
@@ -21,4 +25,13 @@ $green: #77E58A;
 $orange: #FF5722;
 
 // border radius
-$radius-small: 4px;
+$radiusSmall: 4px;
+
+/**
+ * FONT
+ */
+
+$fwLight: 200;
+$fwRegular: 400;
+$fwBold: 600;
+$fwBolder: 900;
