Create form inputs SCSS + some cleaning (#35)
Create form inputs SCSS + some cleaning

--- a/src/View/page/index.html
+++ b/src/View/page/index.html
@@ -7,6 +7,24 @@
     <title>Oply</title>
 </head>
 <body>
+	<div class="form">
+        <div class="field">
+            <label for="" class="label">Your email address</label>
+            <input type="text" value="johndoe@gmail.com" class="input__text">
+        </div>
+        <div class="field field--valid">
+            <label for="" class="label">Your email address</label>
+            <input type="text" value="johndoe@gmail.com" class="input__text">
+        </div>
+        <div class="field field--error">
+            <label for="" class="label">Your email address</label>
+            <input type="text" value="johndoe@gmail.com" class="input__text">
+        </div>
+        <div class="field field--disable">
+                <label for="" class="label">Your email address</label>
+                <input type="text" value="johndoe@gmail.com" class="input__text">
+            </div>
+    </div>
 	<button class="btn">Connexion</button>
 </body>
 </html>
