--- a/web/scss/ui/_label.scss
+++ b/web/scss/ui/_label.scss
@@ -1,5 +1,6 @@
 .label {
     margin-bottom: .25rem;
-    font-size: 12px;
+    font-size: .625rem;
     text-transform: uppercase;
+    letter-spacing: .15px;
 }
