--- a/web/scss/ui/_field.scss
+++ b/web/scss/ui/_field.scss
@@ -1,7 +1,7 @@
 .field {
     display: flex;
     flex-direction: column;
-    margin-bottom: .75rem;
+    margin-bottom: 1.5rem;
 
     &--valid {
         .label {
