--- a/web/scss/ui/_input.scss
+++ b/web/scss/ui/_input.scss
@@ -1,6 +1,6 @@
 .input__text {
-    font-size: 1rem;
-    padding: .5rem 1rem;
+    font-size: .75rem;
+    padding: 1rem 1.5rem;
     border: 1px solid #E3E9F3;
     border-radius: $radiusSmall;
     transition: .2s $cubic01;
