add new font weight + change btn font weight

--- a/src/View/page/sign-up.html
+++ b/src/View/page/sign-up.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Joey - Sign up</title>
     <link rel="stylesheet" type="text/css" href="../../../web/css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Poppins:200,400,600,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:200,400,500, 600,900" rel="stylesheet">
 </head>
 <body class="sign-up">
 
@@ -30,6 +30,8 @@
                     <label for="" class="label">Confirmation of password</label>
                     <input type="text" class="input__text" placeholder="johnidoe@oply.com">
                 </div>
+
+                <button class="btn">Sign up now</button>
             </form>
         </div>
     </main>
