--- a/web/scss/ui/_btn.scss
+++ b/web/scss/ui/_btn.scss
@@ -3,7 +3,7 @@
 	color: $white;
 	font-size: 13px;
 	line-height: 20px;
-	font-weight: $fwBold;
+	font-weight: $fwMedium;
 	height: 54px;
 	padding: 0 120px;
 	border-radius: $radiusSmall;
