ui to components, containers folder created

--- a/src/View/page/sign-up.html
+++ b/src/View/page/sign-up.html
@@ -9,12 +9,13 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins:200,400,500, 600,900" rel="stylesheet">
 </head>
 <body class="sign-up">
+    <header class="header"><a href="">Oply</a></header>
 
     <main class="layout__container">
         <div class="sign-up__main">
             <div class="sign-up__headtitle">
                 <h1>Sign up to Joey</h1>
-                <p>Petite catchline des familles</p>
+                <p class="subtitle">Petite catchline des familles</p>
             </div>
         
             <form action="">
@@ -31,7 +32,12 @@
                     <input type="text" class="input__text" placeholder="johnidoe@oply.com">
                 </div>
 
-                <button class="btn">Sign up now</button>
+                <div class="sign-up__form-footer">
+                    <div class="btn__outer">
+                        <button class="btn">Sign up now</button>
+                    </div>
+                    <a href="">Already have an account? Log in</a>
+                </div>
             </form>
         </div>
     </main>
