--- a/web/scss/style.scss
+++ b/web/scss/style.scss
@@ -10,17 +10,21 @@
 @import 'pages/sign-up';
 
 
-// UI
+// ATOMS
+@import 'components/layout';
+@import 'components/btn';
 
-// atoms
-@import 'ui/btn';
-@import 'ui/layout';
-@import 'ui/titles';
+// titles
+@import 'components/title';
+@import 'components/subtitle';
 
 // form elements
-@import 'ui/field';
-@import 'ui/label';
-@import 'ui/input';
+@import 'components/field';
+@import 'components/label';
+@import 'components/input';
+
+// ORGANISMS
+@import 'containers/header';
 
 
 
