add new input styles with icon

--- a/src/View/page/sign-up.html
+++ b/src/View/page/sign-up.html
@@ -21,15 +21,24 @@
             <form action="">
                 <div class="field">
                     <label for="" class="label">Email address</label>
-                    <input type="text" class="input__text" placeholder="johnidoe@oply.com">
+                    <div class="input__text-icon">
+                        <span class="input__icon">yo</span>
+                        <input type="text" class="input__text" placeholder="johnidoe@oply.com">
+                    </div>
                 </div>
                 <div class="field">
                     <label for="" class="label">Password</label>
-                    <input type="text" class="input__text" placeholder="johnidoe@oply.com">
+                    <div class="input__text-icon">
+                        <span class="input__icon">yo</span>
+                        <input type="text" class="input__text" placeholder="johnidoe@oply.com">
+                    </div>
                 </div>
                 <div class="field">
                     <label for="" class="label">Confirmation of password</label>
-                    <input type="text" class="input__text" placeholder="johnidoe@oply.com">
+                    <div class="input__text-icon">
+                        <span class="input__icon">yo</span>
+                        <input type="text" class="input__text" placeholder="johnidoe@oply.com">
+                    </div>
                 </div>
 
                 <div class="sign-up__form-footer">
