--- a/web/scss/tools/_variables.scss
+++ b/web/scss/tools/_variables.scss
@@ -14,8 +14,8 @@ $breakPointMaxDesktop : 1440px;
 $bodyColor: #0A175E;
 $white: #FFFFFF;
 
-// shades - base > light > lighter
-$grey-base: #E3E9F3;
+// border colors
+$dividerLight: #E3E9F3;
 
 // colors - base > light > lighter
 $blue: #3756F2;
