upgrade styles + create new ones

--- a/src/View/page/sign-up.html
+++ b/src/View/page/sign-up.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Joey - Sign up</title>
     <link rel="stylesheet" type="text/css" href="../../../web/css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Poppins:200,400,500, 600,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:200,400,500,600,800" rel="stylesheet">
 </head>
 <body class="sign-up">
     <header class="header"><a href="">Oply</a></header>
@@ -14,30 +14,32 @@
     <main class="layout__container">
         <div class="sign-up__main">
             <div class="sign-up__headtitle">
-                <h1>Sign up to Joey</h1>
+                <h1 class="title__first">Sign up to Joey</h1>
                 <p class="subtitle">Petite catchline des familles</p>
             </div>
         
             <form action="">
-                <div class="field">
-                    <label for="" class="label">Email address</label>
-                    <div class="input__text-icon">
-                        <span class="input__icon">yo</span>
-                        <input type="text" class="input__text" placeholder="johnidoe@oply.com">
+                <div class="sign-up__form-body">
+                    <div class="field">
+                        <label for="" class="label">Email address</label>
+                        <div class="input__text-icon">
+                            <span class="input__icon">yo</span>
+                            <input type="text" class="input__text" placeholder="johnidoe@oply.com">
+                        </div>
                     </div>
-                </div>
-                <div class="field">
-                    <label for="" class="label">Password</label>
-                    <div class="input__text-icon">
-                        <span class="input__icon">yo</span>
-                        <input type="text" class="input__text" placeholder="johnidoe@oply.com">
+                    <div class="field">
+                        <label for="" class="label">Password</label>
+                        <div class="input__text-icon">
+                            <span class="input__icon">yo</span>
+                            <input type="text" class="input__text" placeholder="johnidoe@oply.com">
+                        </div>
                     </div>
-                </div>
-                <div class="field">
-                    <label for="" class="label">Confirmation of password</label>
-                    <div class="input__text-icon">
-                        <span class="input__icon">yo</span>
-                        <input type="text" class="input__text" placeholder="johnidoe@oply.com">
+                    <div class="field">
+                        <label for="" class="label">Confirmation of password</label>
+                        <div class="input__text-icon">
+                            <span class="input__icon">yo</span>
+                            <input type="text" class="input__text" placeholder="johnidoe@oply.com">
+                        </div>
                     </div>
                 </div>
 
@@ -45,7 +47,7 @@
                     <div class="btn__outer">
                         <button class="btn">Sign up now</button>
                     </div>
-                    <a href="">Already have an account? Log in</a>
+                    <p class="btn__bottom-msg">Already have an account? <a href="">Sign in here</a></a></p>
                 </div>
             </form>
         </div>
