--- a/web/scss/pages/_sign-up.scss
+++ b/web/scss/pages/_sign-up.scss
@@ -1,11 +1,15 @@
 .sign-up {
     &__headtitle {
-        margin-bottom: 1.5rem;
+        margin-bottom: 2.5rem;
         text-align: center;
     }
 
     &__main {
         width: 45%;
+    }
+
+    &__form-body {
+        margin-bottom: 3rem;
     }
 
     &__form-footer {
