Create sign up page + upgrading styles (#36)
* update & upgrades form styles + init sign up html

* add new font weight + change btn font weight

* ui to components, containers folder created

* add new input styles with icon

* upgrade styles + create new ones

* small enhancement on input with icon

--- a/web/scss/style.scss
+++ b/web/scss/style.scss
@@ -7,15 +7,24 @@
 
 // PAGES
 @import 'pages/index';
+@import 'pages/sign-up';
 
 
-// UI
-@import 'ui/btn';
+// ATOMS
+@import 'components/layout';
+@import 'components/btn';
+
+// titles
+@import 'components/title';
+@import 'components/subtitle';
 
 // form elements
-@import 'ui/field';
-@import 'ui/label';
-@import 'ui/input';
+@import 'components/field';
+@import 'components/label';
+@import 'components/input';
+
+// ORGANISMS
+@import 'containers/header';
 
 
 
