--- a/web/scss/components/_btn.scss
+++ b/web/scss/components/_btn.scss
@@ -3,7 +3,7 @@
 	color: $white;
 	font-size: 13px;
 	line-height: 20px;
-	font-weight: $fwBold;
+	font-weight: $fwMedium;
 	height: 54px;
 	padding: 0 120px;
 	border-radius: $radiusSmall;
@@ -16,5 +16,17 @@
 	&:hover {
 		background: $blueHover;
 		transition: .3s $cubic01;
+	}
+}
+
+.btn__outer {
+	margin-bottom: 1rem;
+}
+
+.btn__bottom-msg {
+	font-size: .85rem;
+
+	a {
+		font-size: inherit;
 	}
 }
