--- a/src/View/page/sign-up.html
+++ b/src/View/page/sign-up.html
@@ -23,21 +23,21 @@
                     <div class="field">
                         <label for="" class="label">Email address</label>
                         <div class="input__text-icon">
-                            <span class="input__icon">yo</span>
+                            <span class="input__icon"><i class="icon-mail"></i></span>
                             <input type="text" class="input__text" placeholder="johnidoe@oply.com">
                         </div>
                     </div>
                     <div class="field">
                         <label for="" class="label">Password</label>
                         <div class="input__text-icon">
-                            <span class="input__icon">yo</span>
+                            <span class="input__icon"><i class="icon-key"></i></span>
                             <input type="text" class="input__text" placeholder="johnidoe@oply.com">
                         </div>
                     </div>
                     <div class="field">
                         <label for="" class="label">Confirmation of password</label>
                         <div class="input__text-icon">
-                            <span class="input__icon">yo</span>
+                            <span class="input__icon"><i class="icon-key"></i></span>
                             <input type="text" class="input__text" placeholder="johnidoe@oply.com">
                         </div>
                     </div>
@@ -51,6 +51,8 @@
                 </div>
             </form>
         </div>
+        <img src="https://res.cloudinary.com/dj09xr9gd/image/upload/v1528813897/backgrounds/background-connect.svg" class="bg-blue">
+        <img src="https://res.cloudinary.com/dj09xr9gd/image/upload/v1528813897/illustrations/illu-connect.png" class="bg-connect">
     </main>
     
 </body>
