--- a/web/scss/components/_btn.scss
+++ b/web/scss/components/_btn.scss
@@ -5,7 +5,7 @@
 	line-height: 20px;
 	font-weight: $fwMedium;
 	height: 54px;
-	padding: 0 120px;
+	width: 100%;
 	border-radius: $radiusSmall;
 	border: none;
 	text-transform: uppercase;
