--- a/web/scss/components/_input.scss
+++ b/web/scss/components/_input.scss
@@ -30,5 +30,9 @@
         font-size: .75rem;
         background: #F3FCFF;
         border-right: 1px solid $dividerLight;
+
+        .icon-mail {
+            font-size: 11px;
+        }
     }
 }
