add img tooltip

--- a/web/scss/style.scss
+++ b/web/scss/style.scss
@@ -23,6 +23,7 @@
 @import 'components/field';
 @import 'components/label';
 @import 'components/input';
+@import 'components/tooltip';
 
 // ORGANISMS
 @import 'containers/header';
