--- a/src/View/page/sign-up.html
+++ b/src/View/page/sign-up.html
@@ -21,7 +21,7 @@
             <form action="">
                 <div class="sign-up__form-body">
                     <div class="field">
-                        <label for="" class="label">Email address</label>
+                        <label for="" class="label">Email address<i class="tooltip-info icon-tooltip"></i></label>
                         <div class="input__text-icon">
                             <span class="input__icon"><i class="icon-mail"></i></span>
                             <input type="text" class="input__text" placeholder="johnidoe@oply.com">
