init table scss component

--- a/web/scss/style.scss
+++ b/web/scss/style.scss
@@ -14,6 +14,7 @@
 // ATOMS
 @import 'components/layout';
 @import 'components/btn';
+@import 'components/table';
 
 // titles
 @import 'components/title';
