header connect css

--- a/web/scss/components/_btn.scss
+++ b/web/scss/components/_btn.scss
@@ -30,3 +30,12 @@
 		font-size: inherit;
 	}
 }
+
+.btn__client {
+	max-width: 153px;
+	padding: 0 19px;
+	height: 42px;
+	font-size: 16px;
+	line-height: 25px;
+	text-transform: initial;
+}
