--- a/web/scss/style.scss
+++ b/web/scss/style.scss
@@ -9,6 +9,7 @@
 // PAGES
 @import 'pages/index';
 @import 'pages/sign-up';
+@import 'pages/client-list';
 
 
 // ATOMS
@@ -27,6 +28,7 @@
 
 // ORGANISMS
 @import 'containers/header';
+@import 'containers/header-connect';
 
 
 
