--- a/web/scss/tools/_fonts.scss
+++ b/web/scss/tools/_fonts.scss
@@ -25,7 +25,14 @@
 }
 
 
-
+.icon-logo:before {
+  content: "\e908";
+  color: #0a175e;
+}
+.icon-arrow-bottom:before {
+  content: "\e909";
+  color: #0a175e;
+}
 .icon-eye:before {
   content: "\e903";
   color: #0a175e;
