--- a/web/scss/tools/_variables.scss
+++ b/web/scss/tools/_variables.scss
@@ -5,6 +5,7 @@
 // body colors
 $bodyColor: #0A175E;
 $white: #FFFFFF;
+$bgBlue : #FAFEFF;
 
 // border colors
 $dividerLight: #E3E9F3;
@@ -17,6 +18,9 @@ $orange: #FF5722;
 
 // border radius
 $radiusSmall: 4px;
+
+// texte color:
+$textBlue: #0A175E;
 
 /**
  * FONT
