--- a/src/View/page/client-list.html
+++ b/src/View/page/client-list.html
@@ -26,19 +26,27 @@
                 <td class="table__body-cell">TF1 - Journal de midi</td>
                 <td class="table__body-cell">Pernault</td>
                 <td class="table__body-cell">Jean-Pierre</td>
-                <td class="table__body-cell">In process</td>
+                <td class="table__body-cell">
+                    <span class="tag__process color-turquoise">In process</span>
+                </td>
                 <td class="table__body-cell">01/12/2018</td>
                 <td class="table__body-cell">+337 70 67 51 73</td>
-                <td class="table__body-cell">High</td>
+                <td class="table__body-cell">
+                    <span class="tag__impact high">High</span>
+                </td>
             </tr>
             <tr class="table__body-row">
                 <td class="table__body-cell">TF1 - Journal de midi</td>
                 <td class="table__body-cell">Pernault</td>
                 <td class="table__body-cell">Jean-Pierre</td>
-                <td class="table__body-cell">In process</td>
+                <td class="table__body-cell">
+                    <div class="tag__process color-orange">Validated</div>
+                </td>
                 <td class="table__body-cell">01/12/2018</td>
                 <td class="table__body-cell">+337 70 67 51 73</td>
-                <td class="table__body-cell">High</td>
+                <td class="table__body-cell">
+                        <span class="tag__impact low">Low</span>
+                </td>
             </tr>
         </table>
     </div>
