--- a/web/scss/style.scss
+++ b/web/scss/style.scss
@@ -4,6 +4,7 @@
 @import 'tools/medias';
 @import 'tools/transitions';
 @import 'tools/fonts';
+@import 'tools/classes';
 
 
 // PAGES
@@ -13,8 +14,11 @@
 
 // ATOMS
 @import 'components/layout';
-@import 'components/btn';
 @import 'components/table';
+
+// even smaller then atoms
+@import 'components/tag';
+@import 'components/btn';
 
 // titles
 @import 'components/title';
