--- a/web/scss/tools/_variables.scss
+++ b/web/scss/tools/_variables.scss
@@ -12,6 +12,8 @@ $dividerLight: #E3E9F3;
 // colors - base > light > lighter
 $blue: #3756F2;
 $blueHover: #2442DA;
+$turquoise: #00CFD8;
+
 $green: #77E58A;
 $orange: #FF5722;
 
