Create SCSS Table component (#42)
* create client list html

* init table scss component

* add border radius to row

* init tags

--- a/web/scss/style.scss
+++ b/web/scss/style.scss
@@ -4,6 +4,7 @@
 @import 'tools/medias';
 @import 'tools/transitions';
 @import 'tools/fonts';
+@import 'tools/classes';
 
 
 // PAGES
@@ -13,6 +14,10 @@
 
 // ATOMS
 @import 'components/layout';
+@import 'components/table';
+
+// even smaller then atoms
+@import 'components/tag';
 @import 'components/btn';
 
 // titles
