--- a/src/View/page/client-list.html
+++ b/src/View/page/client-list.html
@@ -6,9 +6,50 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="../../../web/css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Poppins:200,400,600,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,600,900" rel="stylesheet">
 </head>
 <body>
+
+    <div class="layout">
+        <h1 class="yolo">yolo</h1>
+        <table class="table">
+            <tr class="table__head-row">
+                <th class="table__head-cell">Account name</th>
+                <th class="table__head-cell">Last name</th>
+                <th class="table__head-cell">Name</th>
+                <th class="table__head-cell">Status</th>
+                <th class="table__head-cell">Created at</th>
+                <th class="table__head-cell">Office home</th>
+                <th class="table__head-cell">Impact level</th>
+            </tr>
+            <tr class="table__body-row">
+                <td class="table__body-cell">TF1 - Journal de midi</td>
+                <td class="table__body-cell">Pernault</td>
+                <td class="table__body-cell">Jean-Pierre</td>
+                <td class="table__body-cell">
+                    <span class="tag__process color-turquoise">In process</span>
+                </td>
+                <td class="table__body-cell">01/12/2018</td>
+                <td class="table__body-cell">+337 70 67 51 73</td>
+                <td class="table__body-cell">
+                    <span class="tag__impact high">High</span>
+                </td>
+            </tr>
+            <tr class="table__body-row">
+                <td class="table__body-cell">TF1 - Journal de midi</td>
+                <td class="table__body-cell">Pernault</td>
+                <td class="table__body-cell">Jean-Pierre</td>
+                <td class="table__body-cell">
+                    <div class="tag__process color-orange">Validated</div>
+                </td>
+                <td class="table__body-cell">01/12/2018</td>
+                <td class="table__body-cell">+337 70 67 51 73</td>
+                <td class="table__body-cell">
+                        <span class="tag__impact low">Low</span>
+                </td>
+            </tr>
+        </table>
+    </div>
     
 </body>
 </html>
