--- a/web/scss/tools/_variables.scss
+++ b/web/scss/tools/_variables.scss
@@ -12,6 +12,8 @@ $dividerLight: #E3E9F3;
 // colors - base > light > lighter
 $blue: #3756F2;
 $blueHover: #2442DA;
+$turquoise: #00CFD8;
+
 $green: #77E58A;
 $orange: #FF5722;
 
@@ -35,3 +37,10 @@ $fwBolder: 800;
  */
 
  $widthMax: 1280px;
+
+
+/**
+ * BOX SHADOWS
+ */
+
+ $boxShadow01: 0 2px 6px 0 rgba(0,176,255,0.08);
