--- a/src/View/page/client-list.html
+++ b/src/View/page/client-list.html
@@ -8,7 +8,20 @@
     <link rel="stylesheet" type="text/css" href="../../../web/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins:200,400,600,900" rel="stylesheet">
 </head>
-<body>
+
+<body class="client-list">
+  <header class="header-connect">
+    <div class="info">
+      <p class="logo"><i class="icon-logo"></i>OPLY</p>
+      <button class="btn btn__client">Add a client</button>
+    </div>
+    <div class="info info-user">
+      <p class="name">Mr. John Doe</p>
+      <div class="img-user"></div>
+    </div>
+  </header>
+  <div class="layout">
+  </div>
     
 </body>
 </html>
