--- a/src/View/page/client-list.html
+++ b/src/View/page/client-list.html
@@ -12,7 +12,10 @@
 <body class="client-list">
   <header class="header-connect">
     <div class="info">
-      <p class="logo"><i class="icon-logo"></i>OPLY</p>
+      <div class="logo">
+        <img src="https://res.cloudinary.com/dj09xr9gd/image/upload/v1528893547/logo_1.svg">
+        <p></i>JOEY</p> 
+      </div>
       <button class="btn btn__client">Add a client</button>
     </div>
     <div class="info info-user">
