Integrate dashboard header (#43)
* header connect css

* header responsive

* add logo

--- a/web/scss/components/_layout.scss
+++ b/web/scss/components/_layout.scss
@@ -12,4 +12,10 @@
     @include minWidth($bpDesktopSm) {
         width: 80%;
     }
+
+    &__dashboard {
+        @include minWidth($bpDesktopSm) {
+            width: 88%;
+        }
+    }
 }
