--- a/web/scss/components/_tag.scss
+++ b/web/scss/components/_tag.scss
@@ -27,6 +27,8 @@
 
     // process
     &__process {
+        font-size: inherit;
+        
         &:before {
             content: '• ';
         }
