--- a/web/scss/components/_title.scss
+++ b/web/scss/components/_title.scss
@@ -7,3 +7,12 @@
     font-weight: $fwBolder;
     font-size: 1.5rem;
 }
+
+.title__dashboard {
+	font-size: 28px;
+	line-height: 42px;
+	font-weight: 300;
+	color: $turquoise;
+	margin-top: 56px;
+	margin-bottom: 40px;
+}
