--- a/web/scss/style.scss
+++ b/web/scss/style.scss
@@ -10,6 +10,7 @@
 // PAGES
 @import 'pages/index';
 @import 'pages/sign-up';
+@import 'pages/client-list';
 
 
 // ATOMS
@@ -32,6 +33,7 @@
 
 // ORGANISMS
 @import 'containers/header';
+@import 'containers/header-connect';
 
 
 
