--- a/src/View/page/client-list.html
+++ b/src/View/page/client-list.html
@@ -8,48 +8,61 @@
     <link rel="stylesheet" type="text/css" href="../../../web/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,600,900" rel="stylesheet">
 </head>
-<body>
 
-    <div class="layout">
-        <h1 class="yolo">yolo</h1>
-        <table class="table">
-            <tr class="table__head-row">
-                <th class="table__head-cell">Account name</th>
-                <th class="table__head-cell">Last name</th>
-                <th class="table__head-cell">Name</th>
-                <th class="table__head-cell">Status</th>
-                <th class="table__head-cell">Created at</th>
-                <th class="table__head-cell">Office home</th>
-                <th class="table__head-cell">Impact level</th>
-            </tr>
-            <tr class="table__body-row">
-                <td class="table__body-cell">TF1 - Journal de midi</td>
-                <td class="table__body-cell">Pernault</td>
-                <td class="table__body-cell">Jean-Pierre</td>
-                <td class="table__body-cell">
-                    <span class="tag__process color-turquoise">In process</span>
-                </td>
-                <td class="table__body-cell">01/12/2018</td>
-                <td class="table__body-cell">+337 70 67 51 73</td>
-                <td class="table__body-cell">
-                    <span class="tag__impact high">High</span>
-                </td>
-            </tr>
-            <tr class="table__body-row">
-                <td class="table__body-cell">TF1 - Journal de midi</td>
-                <td class="table__body-cell">Pernault</td>
-                <td class="table__body-cell">Jean-Pierre</td>
-                <td class="table__body-cell">
-                    <div class="tag__process color-orange">Validated</div>
-                </td>
-                <td class="table__body-cell">01/12/2018</td>
-                <td class="table__body-cell">+337 70 67 51 73</td>
-                <td class="table__body-cell">
-                        <span class="tag__impact low">Low</span>
-                </td>
-            </tr>
-        </table>
+<body class="client-list">
+  <header class="header-connect">
+    <div class="info">
+      <div class="logo">
+        <img src="https://res.cloudinary.com/dj09xr9gd/image/upload/v1528893547/logo_1.svg">
+        <p></i>JOEY</p> 
+      </div>
+      <button class="btn btn__client">Add a client</button>
     </div>
+    <div class="info info-user">
+      <p class="name">Mr. John Doe</p>
+      <div class="img-user"></div>
+    </div>
+  </header>
+  <div class="layout layout__dashboard">
+    <h1 class="title__dashboard">Liste clients</h1>
+    <table class="table">
+        <tr class="table__head-row">
+            <th class="table__head-cell">Account name <i class="icon-arrow-bottom"></i></th>
+            <th class="table__head-cell">Last name <i class="icon-arrow-bottom"></i></th>
+            <th class="table__head-cell">Name <i class="icon-arrow-bottom"></i></th>
+            <th class="table__head-cell">Status <i class="icon-arrow-bottom"></i></th>
+            <th class="table__head-cell">Created at <i class="icon-arrow-bottom"></i></th>
+            <th class="table__head-cell">Office home <i class="icon-arrow-bottom"></i></th>
+            <th class="table__head-cell">Impact level <i class="icon-arrow-bottom"></i></th>
+        </tr>
+        <tr class="table__body-row">
+            <td class="table__body-cell">TF1 - Journal de midi</td>
+            <td class="table__body-cell">Pernault</td>
+            <td class="table__body-cell">Jean-Pierre</td>
+            <td class="table__body-cell">
+                <span class="tag__process color-turquoise">In process</span>
+            </td>
+            <td class="table__body-cell">01/12/2018</td>
+            <td class="table__body-cell">+337 70 67 51 73</td>
+            <td class="table__body-cell">
+              <span class="tag__impact high">High</span>
+            </td>
+        </tr>
+        <tr class="table__body-row">
+            <td class="table__body-cell">TF1 - Journal de midi</td>
+            <td class="table__body-cell">Pernault</td>
+            <td class="table__body-cell">Jean-Pierre</td>
+            <td class="table__body-cell">
+              <div class="tag__process color-orange">Validated</div>
+            </td>
+            <td class="table__body-cell">01/12/2018</td>
+            <td class="table__body-cell">+337 70 67 51 73</td>
+            <td class="table__body-cell">
+              <span class="tag__impact low">Low</span>
+            </td>
+        </tr>
+    </table>
+  </div>
     
 </body>
 </html>
