fix base font size to 14px

--- a/web/scss/tools/_variables.scss
+++ b/web/scss/tools/_variables.scss
@@ -31,7 +31,8 @@ $grey: #bbb;
 
 $mainFont: 'Poppins', sans-serif;
 
-$fwLight: 200;
+$fwLighter: 200;
+$fwLight: 300;
 $fwRegular: 400;
 $fwMedium: 500;
 $fwBold: 600;
