init html + stepper scss

--- a/web/scss/containers/_stepper.scss
+++ b/web/scss/containers/_stepper.scss
@@ -23,7 +23,7 @@
     &__step {
         position: relative;
         display: flex;
-        flex-grow: 1;
+        flex: 1;
         flex-direction: column;
         z-index: 2;
 
