--- a/src/View/page/client-list.html
+++ b/src/View/page/client-list.html
@@ -16,9 +16,12 @@
         <img src="https://res.cloudinary.com/dj09xr9gd/image/upload/v1528893547/logo_1.svg">
         <p></i>JOEY</p> 
       </div>
-      <button class="btn btn__client">Add a client</button>
+      <a href="" class="link-header">Liste clients</a>
+      <a href="" class="link-header">Paramètre compte</a>
+      <a href="" class="link-header">Liste managers</a>
     </div>
     <div class="info info-user">
+      <button class="btn btn__client">Add a client</button>
       <p class="name">Mr. John Doe</p>
       <div class="img-user"></div>
     </div>
