--- a/web/scss/containers/_header-connect.scss
+++ b/web/scss/containers/_header-connect.scss
@@ -27,6 +27,13 @@
 		}
 	}
 
+	.link-header {
+		text-decoration: none;
+		white-space: nowrap;
+		margin-right: 34px;
+		font-size: 14px;
+	}
+
 	.info {
 		display: flex;
 		align-items: center;
