--- a/web/scss/tools/_fonts.scss
+++ b/web/scss/tools/_fonts.scss
@@ -24,6 +24,18 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-add-user:before {
+  content: "\e908";
+  color: #0a175e;
+}
+.icon-select:before {
+  content: "\e90f";
+  color: #0a175e;
+}
+.icon-small-arrow-right:before {
+  content: "\e910";
+  color: #0a175e;
+}
 .icon-arrow-bottom:before {
   content: "\e909";
   color: #0a175e;
